align fix

--- a/src/App.css
+++ b/src/App.css
@@ -1250,7 +1250,7 @@ select {
   .dowChartDisplay-Light {
     width: 475px;
     height: 260px;
-    margin-left: 80px;
+    margin-left: 30px;
   }
   #Header-Title {
     width: 15em;
